--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 flask==2.3.3
-python-telegram-bot==20.4
-sqlalchemy==2.0.20
-apscheduler==3.10.1
+sqlalchemy==1.4.46  # Стабильная версия для Python 3.11/3.12
+python-telegram-bot==13.15
 gunicorn==21.2.0
 python-dotenv==1.0.0
