--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 flask==2.3.3
-sqlalchemy==1.4.46  # Стабильная версия для Python 3.11/3.12
+sqlalchemy==1.4.46
 python-telegram-bot==13.15
 gunicorn==21.2.0
 python-dotenv==1.0.0
