--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,23 @@
 services:
   - type: web
     name: TolyattiFencingRegBot
-    env: docker
+    plan: free
     region: oregon
-    plan: free        # или starter
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
     envVars:
       - key: TELEGRAM_TOKEN
         sync: false
       - key: WEBHOOK_URL
         fromPlan: true
-      - key: PORT
-        value: 10000
+      - key: ADMIN_TELEGRAM_IDS
+        sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: TolyattiFencingDB
+          property: connectionString
+
+databases:
+  - name: TolyattiFencingDB
+    plan: free
