--- a/render.yaml
+++ b/render.yaml
@@ -15,9 +15,9 @@ services:
         sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: TolyattiFencingDB
+          name: fencing-db
           property: connectionString
 
 databases:
-  - name: TolyattiFencingDB
+  - name: fencing-db
     plan: free
