--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.3.3
-python-telegram-bot==13.15
-SQLAlchemy==1.4.48
+python-telegram-bot==20.7
+SQLAlchemy==2.0.23
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
