--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.3.3
-python-telegram-bot==20.7
-SQLAlchemy==2.0.23
+python-telegram-bot==20.9
+SQLAlchemy==1.4.48
 gunicorn==21.2.0
-psycopg2-binary==2.9.9
+aiohttp
