--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==2.3.3
-python-telegram-bot==20.8
-SQLAlchemy==1.4.48
-gunicorn==21.2.0
-aiohttp
+python-telegram-bot==20.7
+SQLAlchemy==2.0.23
+waitress==2.1.2
 psycopg2-binary==2.9.9
