--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.3
-python-telegram-bot[job-queue]==20.8
-SQLAlchemy==2.0.23
+python-telegram-bot==13.15
+SQLAlchemy==1.4.48
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
-urllib3==2.0.7
+urllib3==1.26.18
