--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==2.3.3
-python-telegram-bot[job-queue]==20.7
+python-telegram-bot==20.7
 SQLAlchemy==1.4.48
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
-urllib3==1.26.18
 python-dotenv==1.0.0
