--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,8 @@
-# Телеграм бот
-TELEGRAM_TOKEN=ваш_токен_бота_здесь
+TELEGRAM_TOKEN=ваш_токен_бота
 WEBHOOK_URL=https://ваш-проект.onrender.com
-
-# Администраторы (через запятую)
-ADMIN_TELEGRAM_IDS=123456789,987654321
-
-# База данных (автоматически настраивается на Render)
-DATABASE_URL=postgresql://user:password@localhost/fencing_db
-
-# Безопасность
-SECRET_KEY=измените_это_на_случайную_строку
+ADMIN_TELEGRAM_IDS=123456789
+DATABASE_URL=postgresql://user:pass@localhost/dbname
+SECRET_KEY=секретный_ключ
 ADMIN_TOKEN_EXPIRE=3600
-
-# Настройки сервера
 PORT=10000
-DEBUG=False
-LOG_LEVEL=INFO
-
-# Настройки приложения
-MAX_FILE_SIZE=16777216
-ITEMS_PER_PAGE=20
+DEBUG=True
