--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,5 @@
-TELEGRAM_TOKEN=ваш_токен_бота
-WEBHOOK_URL=https://ваш-проект.onrender.com
+TELEGRAM_TOKEN=ваш_токен
 ADMIN_TELEGRAM_IDS=123456789
-DATABASE_URL=postgresql://user:pass@localhost/dbname
-SECRET_KEY=секретный_ключ
-ADMIN_TOKEN_EXPIRE=3600
-PORT=10000
-DEBUG=True
+WEBHOOK_URL=https://ваш-бот.onrender.com
+DATABASE_URL=postgresql://user:pass@localhost/db
+SECRET_KEY=ваш_секретный_ключ
