--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TELEGRAM_TOKEN=ваш_токен
 ADMIN_TELEGRAM_IDS=123456789
-WEBHOOK_URL=https://ваш-бот.onrender.com
-DATABASE_URL=postgresql://user:pass@localhost/db
+WEBHOOK_URL=https://ваш-проект.onrender.com
+DATABASE_URL=postgresql://user:pass@localhost/dbname
 SECRET_KEY=ваш_секретный_ключ
