--- a/.env
+++ b/.env
@@ -1,3 +1,22 @@
-TELEGRAM_TOKEN=ваш_токен_бота
-WEBHOOK_URL=https://ваш-проект.onrender.com/webhook
-PORT=10000
+#!/bin/bash
+# Скрипт для быстрой настройки
+echo "🔧 Настройка админ-панели..."
+
+# Получаем текущий SECRET_KEY
+if [ -f ".env" ]; then
+    SECRET_KEY=$(grep SECRET_KEY .env | cut -d '=' -f2)
+    echo "✅ Текущий SECRET_KEY: $SECRET_KEY"
+    echo ""
+    echo "📋 Ссылки для доступа:"
+    echo "1. Полная админ-панель с токеном:"
+    echo "   https://tolyattifencingregbot.onrender.com/admin?token=$SECRET_KEY"
+    echo ""
+    echo "2. Простая версия (только просмотр):"
+    echo "   https://tolyattifencingregbot.onrender.com/admin?simple=1"
+    echo ""
+    echo "3. API для получения данных:"
+    echo "   https://tolyattifencingregbot.onrender.com/api/registrations?token=$SECRET_KEY"
+    echo ""
+else
+    echo "❌ Файл .env не найден"
+fi
